--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.0",
+    "react-toastify": "^10.0.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
